--- a/serverAPI/ExpoPlatform/pom.xml
+++ b/serverAPI/ExpoPlatform/pom.xml
@@ -41,8 +41,8 @@
               <maxIdleTime>30000</maxIdleTime>
             </connector>
           </connectors>
-          <webAppSourceDirectory>${project.build.directory}/${pom.artifactId}-${pom.version}</webAppSourceDirectory>
-          <contextPath>/</contextPath>
+          <webAppSourceDirectory>${project.build.directory}/expoPlatformServer</webAppSourceDirectory>
+          <contextPath>/expoPlatformServer</contextPath>
         </configuration>
       </plugin>
     </plugins>
