--- a/web/expoplatformweb/pom.xml
+++ b/web/expoplatformweb/pom.xml
@@ -26,7 +26,7 @@
   <name>expoplatformweb</name>
   <groupId>expoplatformweb</groupId>
   <artifactId>expoplatformweb</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
 
   <build>
     <plugins>
