--- a/serverAPI/ExpoPlatform/pom.xml
+++ b/serverAPI/ExpoPlatform/pom.xml
@@ -238,8 +238,16 @@
       <artifactId>mail</artifactId>
       <version>1.4</version>
     </dependency>
-
-
+      <dependency>
+          <groupId>org.jetbrains</groupId>
+          <artifactId>annotations-java5</artifactId>
+          <version>RELEASE</version>
+      </dependency>
+      <dependency>
+          <groupId>org.jetbrains</groupId>
+          <artifactId>annotations-java5</artifactId>
+          <version>RELEASE</version>
+      </dependency>
 
 
   </dependencies>
