--- a/serverAPI/ExpoPlatform/src/main/resources/jdbc/database.properties
+++ b/serverAPI/ExpoPlatform/src/main/resources/jdbc/database.properties
@@ -1,5 +1,5 @@
 mysql.driverclass=com.mysql.jdbc.Driver
 #mysql.jdbcurl=jdbc:mysql://120.26.68.40:3306/wuliaole
-mysql.jdbcurl=jdbc:mysql://localhost:3306/atongmu?characterEncoding=utf-8
-mysql.user=lsReactHot2017
-mysql.password=LsreactServer2017
+mysql.jdbcurl=jdbc:mysql://localhost:3306/atm?characterEncoding=utf-8
+mysql.user=root
+mysql.password=root
