--- a/serverAPI/ExpoPlatform/src/main/webapp/WEB-INF/web.xml
+++ b/serverAPI/ExpoPlatform/src/main/webapp/WEB-INF/web.xml
@@ -52,4 +52,28 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
+
+
+  <filter>
+    <filter-name>secretRequestFilter</filter-name>
+    <filter-class>com.atongmu.mvc.filter.secretRequestFilter</filter-class>
+    <init-param>
+      <param-name>encoding</param-name>
+      <param-value>UTF-8</param-value>
+    </init-param>
+    <init-param>
+      <param-name>forceEncoding</param-name>
+      <param-value>true</param-value>
+    </init-param>
+  </filter>
+
+  <filter-mapping>
+    <filter-name>secretRequestFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+
+
+
+
+
 </web-app>
