--- a/serverAPI/ExpoPlatform/src/main/resources/jdbc/database.properties
+++ b/serverAPI/ExpoPlatform/src/main/resources/jdbc/database.properties
@@ -2,4 +2,4 @@ mysql.driverclass=com.mysql.jdbc.Driver
 #mysql.jdbcurl=jdbc:mysql://120.26.68.40:3306/wuliaole
 mysql.jdbcurl=jdbc:mysql://localhost:3306/atm?characterEncoding=utf-8
 mysql.user=root
-mysql.password=root
+mysql.password=fm@youtumi
