--- a/app/Atongmu/ios/Atongmu.xcworkspace/xcshareddata/xcschemes/Atongmu.xcscheme
+++ b/app/Atongmu/ios/Atongmu.xcworkspace/xcshareddata/xcschemes/Atongmu.xcscheme
@@ -1,25 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0620"
+   LastUpgradeVersion = "0830"
    version = "1.3">
    <BuildAction
-      parallelizeBuildables = "NO"
+      parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
       <BuildActionEntries>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "83CBBA2D1A601D0E00E9B192"
-               BuildableName = "libReact.a"
-               BlueprintName = "React"
-               ReferencedContainer = "container:../node_modules/react-native/React/React.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
          <BuildActionEntry
             buildForTesting = "YES"
             buildForRunning = "YES"
@@ -31,20 +17,6 @@
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
                BuildableName = "Atongmu.app"
                BlueprintName = "Atongmu"
-               ReferencedContainer = "container:Atongmu.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "NO"
-            buildForArchiving = "NO"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "AtongmuTests.xctest"
-               BlueprintName = "AtongmuTests"
                ReferencedContainer = "container:Atongmu.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -63,6 +35,16 @@
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
                BuildableName = "AtongmuTests.xctest"
                BlueprintName = "AtongmuTests"
+               ReferencedContainer = "container:Atongmu.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "807D79661F167A9F002B9F88"
+               BuildableName = "AtongmuUITests.xctest"
+               BlueprintName = "AtongmuUITests"
                ReferencedContainer = "container:Atongmu.xcodeproj">
             </BuildableReference>
          </TestableReference>
