正常运行主界面

--- a/app/Atongmu/ios/Podfile
+++ b/app/Atongmu/ios/Podfile
@@ -18,6 +18,7 @@ target 'Atongmu' do
     'RCTLinkingIOS',
     'RCTSettings',
     'RCTVibration',
+    'RCTAnimation',
     'RCTWebSocket',
     ]
 
