--- a/app/Atongmu/package.json
+++ b/app/Atongmu/package.json
@@ -9,7 +9,9 @@
 	"dependencies": {
 		"react": "^16.0.0-alpha.6",
 		"react-native": "^0.44.3",
+		"react-native-button": "^2.1.0",
 		"react-native-deprecated-custom-components": "^0.1.0",
+		"react-native-router-flux": "^4.0.0-beta.12",
 		"react-native-tab-navigator": "^0.3.3",
 		"react-native-vector-icons": "^4.2.0"
 	},
