--- a/app/Atongmu/ios/Atongmu/Info.plist
+++ b/app/Atongmu/ios/Atongmu/Info.plist
@@ -55,6 +55,8 @@
 	<string></string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
+    <key>NSAllowsArbitraryLoads</key>
+    <true/>
 		<key>NSExceptionDomains</key>
 		<dict>
 			<key>localhost</key>
